# ultramar-private-markets

./: .gitignore  README.md  debug_balance_sheet.json  package.json  vercel.json
app/: layout.tsx  page.tsx  (+2 more)
apps/polymarket/backend/: .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
apps/polymarket/backend/backend/: __init__.py  config.py  logging.py
apps/polymarket/backend/backend/analytics/: pnl.py
apps/polymarket/backend/backend/api/: app.py
apps/polymarket/backend/backend/db/: models.py  session.py
apps/polymarket/backend/backend/execution/: canary.py  deribit_hedge.py  executor.py  factory.py  intent_report.py  kill_switch.py  order_intents.py  paper.py  paper_gateway.py  polymarket_orders.py  polymarket_sdk_gateway.py  reconciliation.py  startup_health.py  trading_gateway.py  user_stream.py
apps/polymarket/backend/backend/ingest/: deribit_client.py  deribit_ws.py  gamma_client.py  normalize.py  polymarket_client.py  polymarket_gateway.py  polymarket_ws.py  raw_store.py  writers.py
apps/polymarket/backend/backend/mapping/: service.py  table.yaml
apps/polymarket/backend/backend/pricing/: black_scholes.py  cdf.py  iv_surface.py  probabilities.py  spot.py
apps/polymarket/backend/tests/: conftest.py  test_canary.py  test_execution_factory.py  test_execution_integration.py  test_ingest.py  test_intent_report.py  test_kill_switch.py  test_loop.py  test_order_intents.py  test_polymarket_gateway.py  test_pricing.py  test_reconciliation.py  test_startup_health.py  test_trading_gateway.py
apps/polymarket/backend/tools/: discover_markets.py
(+203 files in other folders)
